kubernetes/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pr-bot
  namespace: pr-bot
spec:
  selector:
    matchLabels:
      app: pr-bot
  replicas: 3
  template:
    metadata:
      namespace: pr-bot
      labels:
        app: pr-bot
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - pr-bot
              topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
      - name: gitlab
      containers:
      - name: pr-bot
        image: registry.silverfin.com/development/pr_bot:__COMMIT__
        resources:
          requests:
            cpu: 100m
            memory: 180Mi
        livenessProbe:
          httpGet:
            path: /status
            port: 4567
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /status
            port: 4567
        ports:
        - containerPort: 4567
