kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pr-bot
  namespace: pr-bot
spec:
  type: NodePort
  ports:
  - name: pr-bot
    port: 4567
    targetPort: 4567
  selector:
    app: pr-bot
